--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ $(window).scroll(function() {
 
 
 
-<!--- iOS Landing Page Fix
+<!-- iOS Landing Page Fix -->
 <section>
 	<div class="landing-text">
 		<h1>BOOTSTRAP</h1>
@@ -136,16 +136,15 @@ $(window).scroll(function() {
 		</div>
     </div>
 </section>
--->
 
-<!--- iOS Fixed Image Fix
+<!-- iOS Fixed Image Fix -->
 <figure>
 	<div class="fixed-wrap">
         <div id="fixed">
 		</div>
     </div>
 </figure>
--->
+
 
 
 
