--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144593656-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-144593656-1');
+</script>
+ 
   <title>Michelle Kim, UX Designer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -112,7 +122,7 @@
   </footer>
 
 
-<script>
+<!-- <script>
 $(window).scroll(function() {
     if ($(window).scrollTop() > 10) {
         $('#shadownav').addClass('floatingNav');
@@ -120,7 +130,7 @@ $(window).scroll(function() {
         $('#shadownav').removeClass('floatingNav');
     }
 });
-</script>
+</script> -->
 
 
 
