--- a/cnbc.html
+++ b/cnbc.html
@@ -50,13 +50,14 @@
 
 </nav>
 
+<div id="cnbc">
 
-
+</div>
 
 <div class="padding">
   <div class="container"
     <div class="col">
-      <h2 class="text-center">Overview</h2>
+      <h2>Overview</h2>
     </div>
 <div class="padding">
   <div class="container"
@@ -83,7 +84,7 @@
   <div class="padding">
     <div class="container"
       <div class="col">
-        <h3>Context</h3>
+        <h3 class="text-center">Context</h3>
       </div>
       <div class="container"
         <div class="row">
@@ -102,7 +103,7 @@
 <div class="padding">
   <div class="container">
     <div class="col">
-      <h3>Solutions at Glance</h3>
+      <h3 class="text-center">Solutions at Glance</h3>
       <div class="col-sm-4">
         <h5>01</h5>
         <hr>
@@ -125,12 +126,12 @@
   <div class="padding">
     <div class="container"
       <div class="col">
-        <h2 class= "text-center">Understand</h2>
+        <h2>Understand</h2>
       </div>
       <div class="padding">
         <div class="container">
       <div class="row">
-        <h3>Interaction Map</h3>
+        <h3 class="text-center">Interaction Map</h3>
       </div>
       <!-- <div class="container" -->
         <div class="row">
