--- a/cnbc.html
+++ b/cnbc.html
@@ -50,20 +50,20 @@
 
 </nav>
 
-<div id="cnbc">
+<div id="padding"></div>
 
-</div>
+
+
 
 <div class="padding">
-  <div class="container"
-    <div class="col">
+  <div class="container">
+    <div class="row">
       <h2>Overview</h2>
     </div>
-<div class="padding">
-  <div class="container"
     <div class="row">
       <div class="col-sm-4">
         <h5>Team</h5>
+        <hr>
         <p>Min Jin Kim, UX Researcher<br>
           Elissa Irhamy, Data Scientist<br>
           Yin Yin, UX & Front End Engineer<br>
@@ -71,39 +71,65 @@
       </div>
       <div class="col-sm-4">
         <h5>Client</h5>
+        <hr>
         <p>CNBC New York</p>
       </div>
       <div class="col-sm-4">
         <h5>Duration</h5>
+        <hr>
         <p>3 months</p>
       </div>
-      </div>
+    </div>
   </div>
   </div>
 
   <div class="padding">
-    <div class="container"
+    <div class="container">
+      <div class="col">
+        <h3 class="text-center">Process</h3>
+      </div>
+      <div class="row">
+        <div class="col-sm-3">
+          <h5>Understand</h5>
+          <li>Interaction Map</li>
+          <li>Personas</li>
+        </div>
+        <div class="col-sm-3">
+          <h5>Explore</h5>
+          <li>Competitive Analysis</li>
+          <li>Surveys</li>
+        </div>
+        <div class="col-sm-3">
+          <h5>Identify</h5>
+          <li>Heuristics Evaluation</li>
+          <li>Usability Testing</li>
+        </div>
+        <div class="col-sm-3">
+          <h5>Synthesize</h5>
+          <li>Preference Testing</li>
+          <li>Recommendations</li>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="padding">
+    <div class="container">
       <div class="col">
         <h3 class="text-center">Context</h3>
       </div>
-      <div class="container"
-        <div class="row">
-          <div class="col-sm-6">
-            <h5></h5>
-            <p></p>
-          </div>
-          <div class="col-sm-6">
-            <h5></h5>
-            <p></p>
-          </div>
-          </div>
+      <div class="col">
+        <p>Our client organization is CNBC and we were tasked with evaluating their year-long redesign of their CNBC iOS app version 5.0.3, which launched in January, 2019. Because the CNBC app has a lot of features, the client asked us to narrow our scope to just evaluating the live TV and stock charts features. </p>
       </div>
-      </div>
+    </div>
+  </div>
 
-<div class="padding">
-  <div class="container">
-    <div class="col">
-      <h3 class="text-center">Solutions at Glance</h3>
+  <div class="padding">
+    <div class="container">
+      <div class="col">
+        <h3 class="text-center">Solutions at Glance</h3>
+      </div>
+      <div class="row">
       <div class="col-sm-4">
         <h5>01</h5>
         <hr>
@@ -119,32 +145,161 @@
         <hr>
         <p>Solution 3</p>
       </div>
-      </div>
+    </div>
   </div>
   </div>
 
+
+
   <div class="padding">
-    <div class="container"
-      <div class="col">
+    <div class="container">
+      <div class="row">
         <h2>Understand</h2>
+      </div>
+        <div class="container">
+          <div class="row">
+            <h3 class="text-center">Interaction Map</h3>
+          </div>
+          <div class="col"
+            <p>To better understand our product, we created an interaction map. Creating an interaction map helped us glimpses into potential user journeys, pain points, and see how the different features of the app collectively created a product.</p>
+          </div>
+      </div>
+          <div class="row">
+            <div class="col">
+                <img src="images/interactionmap.png" class="img-responsive">
+            </div>
+          </div>
+
       </div>
       <div class="padding">
         <div class="container">
-      <div class="row">
-        <h3 class="text-center">Interaction Map</h3>
-      </div>
-      <!-- <div class="container" -->
-        <div class="row">
           <div class="col">
-              <img src="images/interactionmap.png" class="img-responsive">
+            <h3 class="text-center">Interviews</h3>
           </div>
+          <div class="row">
+            <div class="col">
+        <img src="images/affinity622.png" style="width:100%" class= "animation" alt= "Vegout">
+            </div>
           </div>
+        </div>
       </div>
-      </div>
-
-    <div class="padding">
-      <div class="container">
     </div>
+
+      <div class="padding">
+        <div class="container">
+          <div class="col">
+            <h3 class="text-center">Personas</h3>
+          </div>
+          <div class="row">
+            <div class="col">
+              <p>We then wanted to understand the people using the CNBC mobile app. To create effective user personas, we decided to interview five students from the Ross School of Business, University of Michigan’s business school. Through the interviews, we collected enough qualitative data to flesh out two types of users. </p>
+            </div>
+            <div>
+              <img src="images/finance.png" style="width:100%" class= "animation" alt= "Vegout">
+          </div>
+        </div>
+      </div>
+    </div>
+
+        <div class="padding">
+          <div class="container">
+            <div class="row">
+              <h2>Explore</h2>
+            </div>
+            <div class="col">
+              <h3 class="text-center">Competitive Analysis</h3>
+            </div>
+            <div class="row">
+              <div class="col-sm-3">
+                <h5>01 Direct</h5>
+                <hr>
+                <p>Bloomberg was a direct competitor because it contained all the main features (markets, news, and video/TV)</p>
+              </div>
+              <div class="col-sm-3">
+                <h5>02 Indirect</h5>
+                <hr>
+                <p>WSJ was an indirect competitor because it provided financial news through some other medium than video</p>
+              </div>
+              <div class="col-sm-3">
+                <h5>03 Partial</h5>
+                <hr>
+                <p>Marketwatch, IGTV, Youtube Live, Yahoo Finance were all partial competitors because they had only a few overlapping content and features</p>
+              </div>
+              <div class="col-sm-3">
+                <h5>04 Parallel</h5>
+                <hr>
+                <p>Robinhood was a parallel competitor because the user base included finance/business interested people</p>
+              </div>
+            </div>
+          </div>
+          </div>
+
+          <div class="padding">
+            <div class="container">
+              <div class="col">
+                <h3 class="text-center">Surveys</h3>
+              </div>
+              <div class="col">
+                <p>We then wanted to learn about people’s habits and preferences. We were able to collect 43 survey responses from potential users who were students and professors from the Ross School of Business. With the surveys, we were able to learn that people prefer on-demand content much more than live content, half of the survey responses who watch cable TV reported they watch it on their mobile phones, and how people decide to sign up for membership largely depended on the uniqueness of the content more than other factors.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="padding">
+            <div class="container">
+              <div class="row">
+                <h2>Identify</h2>
+              </div>
+                <div class="col">
+                  <h3 class="text-center">Heuristics Evaluation</h3>
+                </div>
+                <div class="col">
+                  <p>During heuristics evaluation, we were able to locate several potential usability issues but most notable ones were that when the bookmark option was selected, users were not able to locate where these bookmarked items were being saved. Additionally, the horizontal colored bars across CNBC videos can be an area of confusion since for most video platforms, horizontal bars indicate progress. There was also a search icon in the videos section which did not allow for video searching.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="padding">
+              <div class="container">
+                  <div class="col">
+                    <h3 class="text-center">Usability Testing</h3>
+                  </div>
+                  <div class="col">
+                      <p>A usability testing was done with five participants to be able to provide concrete quantitative and qualitative data to strengthen our argument for our recommendations. The most crucial urgent recommendations were including subtitles for videos, incorporating gestures into videos that are already prevalent in video platforms like Netflix and Youtube such as double tapping to forward and reverse, and relevant link articles near videos for users who want to learn more beyond watching few minute clips. </p>
+                  </div>
+              </div>
+            </div>
+
+            <div class="padding">
+              <div class="container">
+                <div class="row">
+                  <h2>Materialize</h2>
+                </div>
+                <div class="col">
+                  <h3 class="text-center">Preference Testing</h3>
+                </div>
+                <div class="col">
+
+                  <p>We then decided to do a preference testing with eight people to see if people would actually prefer our recommendations over the current design. We cannot show our designs that showcase our recommendations because of the CNBC student project agreement but our designs were preferred 32 out of 32 times.
+</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="padding">
+              <div class="container">
+                  <div class="col">
+                    <h3 class="text-center">Recommendations</h3>
+                  </div>
+                  <div class="col">
+                    <h5>01 Direct</h5>
+
+                      <p>Explain</p>
+                  </div>
+              </div>
+            </div>
+
+
     <footer class="container-fluid text-center">
       <div class="row">
       <!-- <h3>Contact Us</h3>
@@ -152,14 +307,12 @@
       <h4>7185031160</h4>
     </div>
   <div class="col-sm-4"> -->
-    <a href="https://www.linkedin.com/in/mkimdesign/" target="_blank" class="fab fa-linkedin"></a>
-    <a href="https://www.instagram.com/m.zinny/" target="_blank" class="fab fa-instagram"></a>
-  </div>
-      <div class="row">
-        <p>&copy; 2019 Michelle Kim<p>
-  <!-- <div class="col-sm-4">
-    <img src="images/b.png" class="icon">
-  </div> -->
+      <a href="https://www.linkedin.com/in/mkimdesign/" target="_blank" class="fab fa-linkedin"></a>
+      <a href="https://www.instagram.com/m.zinny/" target="_blank" class="fab fa-instagram"></a>
+    </div>
+    <div class="row">
+      <p>&copy; 2019 Michelle Kim<p>
+
     </div>
   </footer>
 
