almost done cnbc

--- a/cnbc.html
+++ b/cnbc.html
@@ -52,7 +52,7 @@
 
 <div id="padding"></div>
 
-
+  <img src="images/cnbc1.png" class="img-responsive">
 
 
 <div class="padding">
@@ -64,10 +64,10 @@
       <div class="col-sm-4">
         <h5>Team</h5>
         <hr>
-        <p>Min Jin Kim, UX Researcher<br>
+        <p>👋Michelle Kim, UX Researcher<br>
           Elissa Irhamy, Data Scientist<br>
           Yin Yin, UX & Front End Engineer<br>
-          Surita Spigner, UX Designer</p>
+          Surita Spigner, UX Researcher</p>
       </div>
       <div class="col-sm-4">
         <h5>Client</h5>
@@ -77,7 +77,7 @@
       <div class="col-sm-4">
         <h5>Duration</h5>
         <hr>
-        <p>3 months</p>
+        <p>Jan 2019 - April 2019, 3 months </p>
       </div>
     </div>
   </div>
@@ -93,6 +93,7 @@
           <h5>Understand</h5>
           <li>Interaction Map</li>
           <li>Personas</li>
+          <li>Scenarios</li>
         </div>
         <div class="col-sm-3">
           <h5>Explore</h5>
@@ -119,7 +120,7 @@
         <h3 class="text-center">Context</h3>
       </div>
       <div class="col">
-        <p>Our client organization is CNBC and we were tasked with evaluating their year-long redesign of their CNBC iOS app version 5.0.3, which launched in January, 2019. Because the CNBC app has a lot of features, the client asked us to narrow our scope to just evaluating the live TV and stock charts features. </p>
+        <p>Our client organization is CNBC and we were tasked with evaluating their year-long redesign of their CNBC iOS app version 5.0.3, which launched in January, 2019. While the CNBC iOS app has a wide variety of features, after the initial meeting with our client, we narrowed our scope to evaluating the extensive live TV and stock-charts features as our primary goals and explore gestures and consider general usability issues as our secondary goals. </p>
       </div>
     </div>
   </div>
@@ -127,23 +128,23 @@
   <div class="padding">
     <div class="container">
       <div class="col">
-        <h3 class="text-center">Solutions at Glance</h3>
+        <h3 class="text-center">Recommendations</h3>
       </div>
       <div class="row">
       <div class="col-sm-4">
         <h5>01</h5>
         <hr>
-        <p>Solution 1</p>
+        <p>Information displayed in stock-charts are important, but the ability to filter out data should not be neglected. Allow more manipulation of stock charts.</p>
       </div>
       <div class="col-sm-4">
         <h5>02</h5>
         <hr>
-        <p>Solution 2</p>
+        <p>Consider Youtube as competitor and adopt its gestures. Youtube was the most mentioned video watching app amongst our interviewees and survey respondents. People mentioned that they liked the gestures Youtube allowed because it limited action time and multitasking. Incorporate double tapping to forward/reverse, and allow users to minimize their video/play in the background while they decide what content they want to watch next.</p>
       </div>
       <div class="col-sm-4">
         <h5>03</h5>
         <hr>
-        <p>Solution 3</p>
+        <p>CNBC should test out free trials and offer more exclusive content so that users feel a need to install the CNBC app as opposed to other applications for finance related content.</p>
       </div>
     </div>
   </div>
@@ -161,7 +162,7 @@
             <h3 class="text-center">Interaction Map</h3>
           </div>
           <div class="col"
-            <p>To better understand our product, we created an interaction map. Creating an interaction map helped us glimpses into potential user journeys, pain points, and see how the different features of the app collectively created a product.</p>
+            <p>To better understand our product, we created an interaction map. It allowed us to understand the product from a users' perspective.</p>
           </div>
       </div>
           <div class="row">
@@ -178,7 +179,9 @@
           </div>
           <div class="row">
             <div class="col">
-        <img src="images/affinity622.png" style="width:100%" class= "animation" alt= "Vegout">
+            <p> Our most important findings from interviews were:
+              <li>People who preferred watching live TV on mobile applications rather than on TV did so because of less ads and felt content on mobile apps updated faster.</li>
+              <li>Most popular video watching app seemed to be Youtube, and it was because of their recommendation feature, ability to interact with others through likes and comments, and the intuitive gestures such as swiping down to minimize video and being able to multitask.</li>
             </div>
           </div>
         </div>
@@ -241,6 +244,7 @@
               </div>
               <div class="col">
                 <p>We then wanted to learn about people’s habits and preferences. We were able to collect 43 survey responses from potential users who were students and professors from the Ross School of Business. With the surveys, we were able to learn that people prefer on-demand content much more than live content, half of the survey responses who watch cable TV reported they watch it on their mobile phones, and how people decide to sign up for membership largely depended on the uniqueness of the content more than other factors.</p>
+
               </div>
             </div>
           </div>
@@ -254,7 +258,13 @@
                   <h3 class="text-center">Heuristics Evaluation</h3>
                 </div>
                 <div class="col">
-                  <p>During heuristics evaluation, we were able to locate several potential usability issues but most notable ones were that when the bookmark option was selected, users were not able to locate where these bookmarked items were being saved. Additionally, the horizontal colored bars across CNBC videos can be an area of confusion since for most video platforms, horizontal bars indicate progress. There was also a search icon in the videos section which did not allow for video searching.</p>
+                  <p>During heuristics evaluation, we were able to locate several potential usability issues but most notable ones were
+                  <li>when bookmark option was selected, users were not able to locate where these bookmarked items were being saved</li>
+                  <li>the horizontal colored bars across CNBC videos can be an area of confusion since for most video platforms, horizontal bars indicate progress</li>
+                  <li>There was also a search icon in the videos section which did not allow for video searching</li>
+                <li>podcasts lack captions or transcript option</li>
+              <li>videos will autoplay when transitioning between vertical view to horizontal view even when paused</li></p>
+              <img src="images/cnbcreaction.png" class="img-responsive">
                 </div>
               </div>
             </div>
@@ -288,15 +298,27 @@
 
             <div class="padding">
               <div class="container">
-                  <div class="col">
-                    <h3 class="text-center">Recommendations</h3>
-                  </div>
-                  <div class="col">
-                    <h5>01 Direct</h5>
-
-                      <p>Explain</p>
-                  </div>
+                <div class="col">
+                  <h3 class="text-center">Recommendations</h3>
+                </div>
+                <div class="row">
+                <div class="col-sm-4">
+                  <h5>01</h5>
+                  <hr>
+                  <p>Information displayed in stock-charts are important, but the ability to filter out data should not be neglected. Allow more manipulation of stock charts.</p>
+                </div>
+                <div class="col-sm-4">
+                  <h5>02</h5>
+                  <hr>
+                  <p>Consider Youtube as competitor and adopt its gestures. Youtube was the most mentioned video watching app amongst our interviewees and survey respondents. People mentioned that they liked the gestures Youtube allowed because it limited action time and multitasking. Incorporate double tapping to forward/reverse, and allow users to minimize their video/play in the background while they decide what content they want to watch next.</p>
+                </div>
+                <div class="col-sm-4">
+                  <h5>03</h5>
+                  <hr>
+                  <p>CNBC should test out free trials and offer more exclusive content so that users feel a need to install the CNBC app as opposed to other applications for finance related content.</p>
+                </div>
               </div>
+            </div>
             </div>
 
 
