for now cnbc is ok

--- a/cnbc.html
+++ b/cnbc.html
@@ -62,7 +62,7 @@
     </div>
     <div class="row">
       <div class="col-sm-4">
-        <h5>Team</h5>
+        <h4>Team</h4>
         <hr>
         <p>👋Michelle Kim, UX Researcher<br>
           Elissa Irhamy, Data Scientist<br>
@@ -70,12 +70,12 @@
           Surita Spigner, UX Researcher</p>
       </div>
       <div class="col-sm-4">
-        <h5>Client</h5>
+        <h4>Client</h4>
         <hr>
         <p>CNBC New York</p>
       </div>
       <div class="col-sm-4">
-        <h5>Duration</h5>
+        <h4>Duration</h4>
         <hr>
         <p>Jan 2019 - April 2019, 3 months </p>
       </div>
@@ -90,23 +90,23 @@
       </div>
       <div class="row">
         <div class="col-sm-3">
-          <h5>Understand</h5>
+          <h4>Understand</h4>
           <li>Interaction Map</li>
           <li>Personas</li>
           <li>Scenarios</li>
         </div>
         <div class="col-sm-3">
-          <h5>Explore</h5>
+          <h4>Explore</h4>
           <li>Competitive Analysis</li>
           <li>Surveys</li>
         </div>
         <div class="col-sm-3">
-          <h5>Identify</h5>
+          <h4>Identify</h4>
           <li>Heuristics Evaluation</li>
           <li>Usability Testing</li>
         </div>
         <div class="col-sm-3">
-          <h5>Synthesize</h5>
+          <h4>Synthesize</h4>
           <li>Preference Testing</li>
           <li>Recommendations</li>
         </div>
@@ -120,7 +120,7 @@
         <h3 class="text-center">Context</h3>
       </div>
       <div class="col">
-        <p>Our client organization is CNBC and we were tasked with evaluating their year-long redesign of their CNBC iOS app version 5.0.3, which launched in January, 2019. While the CNBC iOS app has a wide variety of features, after the initial meeting with our client, we narrowed our scope to evaluating the extensive live TV and stock-charts features as our primary goals and explore gestures and consider general usability issues as our secondary goals. </p>
+        <p>Our client organization is CNBC and we were tasked with evaluating their year-long redesign of their CNBC iOS app version 5.0.3. The CNBC iOS app has a wide variety of features but after the initial meeting with our client, we narrowed our scope to only evaluating the <mark>extensive live TV</mark> and <mark>stock-charts</mark> features as our primary goals and explore <mark>gestures</mark> and consider general <mark>usability issues</mark> as our secondary goals. </p>
       </div>
     </div>
   </div>
@@ -128,23 +128,28 @@
   <div class="padding">
     <div class="container">
       <div class="col">
-        <h3 class="text-center">Recommendations</h3>
+        <h3 class="text-center">Recommendations at Glance</h3>
       </div>
       <div class="row">
       <div class="col-sm-4">
         <h5>01</h5>
         <hr>
-        <p>Information displayed in stock-charts are important, but the ability to filter out data should not be neglected. Allow more manipulation of stock charts.</p>
+        <p>Information displayed in stock-charts are important, but the ability to filter out data should not be neglected. Allow manipulation of stock charts(e.g. ability to extend lines through certain points on the graph).</p>
+        <img src="images/cnbcrec1.png" class="img-responsive">
+
       </div>
       <div class="col-sm-4">
         <h5>02</h5>
         <hr>
-        <p>Consider Youtube as competitor and adopt its gestures. Youtube was the most mentioned video watching app amongst our interviewees and survey respondents. People mentioned that they liked the gestures Youtube allowed because it limited action time and multitasking. Incorporate double tapping to forward/reverse, and allow users to minimize their video/play in the background while they decide what content they want to watch next.</p>
+        <p>Consider Youtube as competitor and adopt its gestures. Incorporate double tapping to forward/reverse, and allow users to minimize their video/play in the background while they decide what content they want to watch next.</p>
+          <img src="images/cnbcrec2.png" class="img-responsive">
       </div>
       <div class="col-sm-4">
         <h5>03</h5>
         <hr>
-        <p>CNBC should test out free trials and offer more exclusive content so that users feel a need to install the CNBC app as opposed to other applications for finance related content.</p>
+        <p>CNBC should offer free trials to entice users to download the app and thenoffer more exclusive content so that users feel a need to install the CNBC app as opposed to other applications for finance related content.</p>
+        <img src="images/cnbcrec3.png" class="img-responsive">
+
       </div>
     </div>
   </div>
@@ -257,18 +262,23 @@
                 <div class="col">
                   <h3 class="text-center">Heuristics Evaluation</h3>
                 </div>
-                <div class="col">
-                  <p>During heuristics evaluation, we were able to locate several potential usability issues but most notable ones were
+                <div class="row">
+                <div class="col-sm-6">
+                  <h4>Most Notable Violations of Heuristics</h4>
                   <li>when bookmark option was selected, users were not able to locate where these bookmarked items were being saved</li>
                   <li>the horizontal colored bars across CNBC videos can be an area of confusion since for most video platforms, horizontal bars indicate progress</li>
                   <li>There was also a search icon in the videos section which did not allow for video searching</li>
                 <li>podcasts lack captions or transcript option</li>
-              <li>videos will autoplay when transitioning between vertical view to horizontal view even when paused</li></p>
+              <li>videos will autoplay when transitioning between vertical view to horizontal view even when paused</li>
+              </div>
+              <div class="col-sm-6">
               <img src="images/cnbcreaction.png" class="img-responsive">
+              </div>
                 </div>
               </div>
             </div>
 
+            
             <div class="padding">
               <div class="container">
                   <div class="col">
@@ -296,6 +306,9 @@
               </div>
             </div>
 
+
+
+
             <div class="padding">
               <div class="container">
                 <div class="col">
@@ -305,17 +318,22 @@
                 <div class="col-sm-4">
                   <h5>01</h5>
                   <hr>
-                  <p>Information displayed in stock-charts are important, but the ability to filter out data should not be neglected. Allow more manipulation of stock charts.</p>
+                  <p>Information displayed in stock-charts are important, but the ability to filter out data should not be neglected. Allow manipulation of stock charts(e.g. ability to extend lines through certain points on the graph).</p>
+                  <img src="images/cnbcrec1.png" class="img-responsive">
+
                 </div>
                 <div class="col-sm-4">
                   <h5>02</h5>
                   <hr>
                   <p>Consider Youtube as competitor and adopt its gestures. Youtube was the most mentioned video watching app amongst our interviewees and survey respondents. People mentioned that they liked the gestures Youtube allowed because it limited action time and multitasking. Incorporate double tapping to forward/reverse, and allow users to minimize their video/play in the background while they decide what content they want to watch next.</p>
+                    <img src="images/cnbcrec2.png" class="img-responsive">
                 </div>
                 <div class="col-sm-4">
                   <h5>03</h5>
                   <hr>
-                  <p>CNBC should test out free trials and offer more exclusive content so that users feel a need to install the CNBC app as opposed to other applications for finance related content.</p>
+                  <p>CNBC should offer free trials to entice users to download the app and thenoffer more exclusive content so that users feel a need to install the CNBC app as opposed to other applications for finance related content.</p>
+                  <img src="images/cnbcrec3.png" class="img-responsive">
+
                 </div>
               </div>
             </div>
