--- a/lexmark.html
+++ b/lexmark.html
@@ -53,6 +53,8 @@
 <div id="padding"></div>
 
 
+  <img src="images/lexmarkbanner.png" class="img-responsive">
+
 
 
 <div class="padding">
@@ -169,7 +171,7 @@
       </div>
       </div>
 
-    
+
 
       <div class="padding">
         <div class="container">
