--- a/lexmark.html
+++ b/lexmark.html
@@ -64,22 +64,19 @@
     </div>
     <div class="row">
       <div class="col-sm-4">
-        <h5>Team</h5>
+        <h5>Role</h5>
         <hr>
-        <p>Min Jin Kim, UX Researcher<br>
-          Elissa Irhamy, Data Scientist<br>
-          Yin Yin, UX & Front End Engineer<br>
-          Surita Spigner, UX Designer</p>
+        <p>Min Jin Kim, UX Design Intern</p>
       </div>
       <div class="col-sm-4">
-        <h5>Client</h5>
+        <h5>Company</h5>
         <hr>
-        <p>CNBC New York</p>
+        <p>Lexmark in Lexington, KY</p>
       </div>
       <div class="col-sm-4">
         <h5>Duration</h5>
         <hr>
-        <p>3 months</p>
+        <p>May - Aug 2019, 12 weeks</p>
       </div>
     </div>
   </div>
@@ -91,26 +88,29 @@
         <h3 class="text-center">Process</h3>
       </div>
       <div class="row">
-        <div class="col-sm-3">
-          <h5>Understand</h5>
-          <li>Interaction Map</li>
-          <li>Interviews</li>
-          <li>Personas</li>
+        <div class="col-sm-4">
+          <h4>Understand</h4>
+          <li>Meet with Stakeholder</li>
+          <li>Interview Key Players</li>
+          <li>Meet with Developer</li>
+          <li>Gather Existing Data</li>
+          <li>Baseline User Testing</li>
+          <li>Analyze Pain Points</li>
         </div>
-        <div class="col-sm-3">
-          <h5>Explore</h5>
-          <li>Competitive Analysis</li>
-          <li>Surveys</li>
+        <div class="col-sm-4">
+          <h4>Explore</h4>
+          <li>Card Sorting</li>
+          <li>Develop Design Concept</li>
+          <li>Design Review & Revise Concept#1</li>
+          <li>Meet with Stakehodler & Developer</li>
+          <li>Design Review & Revise Concept #2</li>
         </div>
-        <div class="col-sm-3">
-          <h5>Identify</h5>
-          <li>Heuristics Evaluation</li>
-          <li>Usability Testing</li>
-        </div>
-        <div class="col-sm-3">
-          <h5>Synthesize</h5>
-          <li>Preference Testing</li>
-          <li>Recommendations</li>
+        <div class="col-sm-4">
+          <h4>Materialize</h4>
+          <li>Prototype</li>
+          <li>Comparison Study User Testing</li>
+          <li>Revise Prototype</li>
+          <li>Documentation for Delvoper Hand-Off</li>
         </div>
       </div>
     </div>
@@ -122,7 +122,7 @@
         <h3 class="text-center">Context</h3>
       </div>
       <div class="col">
-        <p>Our client organization is CNBC and we were tasked with evaluating their year-long redesign of their CNBC iOS app version 5.0.3, which launched in January, 2019. Because the CNBC app has a lot of features, the client asked us to narrow our scope to just evaluating the live TV and stock charts features. </p>
+        <p>ServiceNow is an online resource for Lexmark employees to submit requests for any items or services. Many users have not been able to quickly and accurately find request forms specific to their needs. This has resulted in delays in users’ requests being met and additional work for the Facilities team since they need to redirect the requests to the proper channels. For Summer 2019, I worked on redesigning the Facilities and Site Operations section of ServiceNow.</p>
       </div>
     </div>
   </div>
